chore: prepare project for GitHub publication
- Add essential open-source project files:
  * LICENSE (MIT)
  * CHANGELOG.md (v1.0.0)
  * CONTRIBUTING.md (contribution guidelines)
  * SECURITY.md (security policy and vulnerability reporting)
  * .gitattributes (language detection)

- Add GitHub templates:
  * Issue templates for bug reports and feature requests
  * Pull request template with comprehensive checklist
  * CI/CD workflows for automated testing and releases

- Track Cargo.lock for binary reproducibility:
  * Remove from .gitignore
  * Add to repository for reproducible builds

- Clean up project structure:
  * Remove 11 redundant/draft documentation files
  * Keep essential documentation (FEATURES, guides, examples)

- Update README.md:
  * Professional GitHub landing page with badges
  * Feature comparison tables
  * Comprehensive documentation and examples

Ready for publication at v1.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 /target
 **/*.rs.bk
 **/*.rs.bak
-Cargo.lock
 # NOTE: 
-#   - For BINARY projects (executables): keep Cargo.lock IGNORED (as above).
-#   - For LIBRARY projects: COMMENT OUT the line above to TRACK Cargo.lock.
+#   - For BINARY projects (executables): Cargo.lock should be TRACKED for reproducible builds.
+#   - For LIBRARY projects: Cargo.lock should be IGNORED.
+#   - This is a binary project, so Cargo.lock is tracked.
 
 # ======================
 # Rust Analyzer
